Correct checkbox alignment bug
This change basically fights unmaintainability with more
unmaintainability, but it works.

--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -343,6 +343,15 @@ section[role="region"].new > header:first-child form {
   color: #4d4d4d;
 }
 
+/* The ".danger" element holds a checkbox which is intended to be vertically
+ * centered according to the message content in the ".bubble" container. When a
+ * ".sender" element is present, the ".danger" element should be explicitly
+ * offset to maintain this alignment.
+ */
+.article-list[data-type="list"] .sender + .danger {
+  top: 2.2rem;
+}
+
 /* hide download button via css on expired messages */
 .message.expired button {
   display: none;
